# streaming-practice

./: README.md  basic-tutorial-2  basic-tutorial-3  streaming-push.cpp
doc/: ffplay.md
doc/Qt+SDL/: SDLQt.md
doc/console_color_change/: color_change.md
doc/ffmpeg/: ffmpeg-command.md
doc/ffmpeg+SDL/: detect_face_player.md  ffmpeg+SDL.md
doc/h264/: h264.md
doc/h264vsh265/: h264vsh265.md
doc/m3u8Encrypt/: aes.md
doc/naming_convenrions/: name.md
doc/rtmp/: rtmp.drawio  rtmp.md  rtmpMsg.md  rtmp_note.md
doc/srsh265/: srs6+hevc.md
ffmpeg/: convert.cpp  encode_streaming.drawio  encode_video.c  img_save.cpp  makefile  streaming-push.cpp
ffmpeg/src/: audio_player.cpp  color_change.cpp  decode2yuv.cpp  rect_player.cpp  rect_test.c  sdl_player.cpp  separate_audio_video.cpp  simple_player.cpp  simple_yuv_convert.cpp  (+4 more)
gstreamer/: basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3.c
make/: makefile
opencv/: Makefile  face_detect_player.cpp  full_player.cpp
pushStreaming/: Makefile  README.md  RrConfig.cpp  Rrconfig.h  config.ini  main.out  push_main.cpp  streaming_p.cpp  streaming_p.h
qSdl/: main.cpp  mainwindow.cpp  mainwindow.h  qSdl.pro
rosTest/: CMakeLists.txt  a.out  hello_cmake.cpp  test.cpp
rtspServer/: rtsp_protocol.c
sort/: a.out  log  sort.cpp  sort.md  test.cpp
srs/: create_threads.cpp  protocolHandel.drawio  rtmpConn.drawio  rtmpPublish.drawio  serverStart.drawio  state-threads.cpp  token_verify.lua
tools/: console_color_change.cpp  get_cpus.cpp  localtor.py  screenRecording.js
webrtc/: jswebrtc.min.js  rtc_player.html
(+16 files in other folders)
